crates/wac-parser/tests/resolution/fail/package-invalid-wasm.wac
import foo: foo:bar/qux;